--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
 			top: 400px;
 			left: 395px;
 			width: 660px;
-			height: 110px;
+			height: 144px;
 		}
 		#txt{
 			position: absolute;
@@ -193,7 +193,7 @@
 <body>
 	<div id="hd">Hobbies</div>
 	<div id="transbg">.</div>
-	<div id="txt">I like to play a harmonica in my free time. Also I like to watch movies a lot. I also have an inclination towards philately and also have a collection.</div>
+	<div id="txt">I like to play a harmonica in my free time. Also I like to watch movies a lot. I also have an inclination towards philately and have a sufficiently good collection.</div>
 	<a id="hm" href="index.html">Home</a>
 	<a id="cont" href="contact.html">Contact</a>
 	<a id="hob" href="hobbies.html">Hobbies</a>
