--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			position: absolute;
 			top: 75px;
 			left: 500px;
-			font-family: bookman old style;
+			font-family: 'Sofia'  , cursive;
 			font-size: 80px;
 			color: #1f7a7a;
 		}
@@ -197,7 +197,7 @@
 <body>
 	<div id="hd">Swarnim</div>
 	<div id="transbg"> .</div>
-	<div class="div-1">I am a socially introvert guy who likes to have a limited number of friends, but I am always available for them. I really like to interact with people from different backgrounds and know their experiences. I am also a workaholic person who likes to keep himself busy and learn new things.</div>
+	<div class="div-1">Hi people!! I am a person who really likes to interact with people from different backgrounds and know their experiences. I am also a workaholic person who likes to keep himself busy and learn new things. I also consider myself to have great leadership qualities.</div>
 	<a id="hm" href="index.html">Home</a>
 	<a id="cont" href="contact.html">Contact</a>
 	<a id="hob" href="hobbies.html">Hobbies</a>
