--- a/edu.html
+++ b/edu.html
@@ -32,7 +32,7 @@
 			position: absolute;
 			width: 650px;
 			text-align: justify;
-			top: 450px;
+			top: 400px;
 			left: 600px;
 			font-family: comic sans ms;
 			color: #394d34;
@@ -44,10 +44,10 @@
 			background-color: white;
 			position: absolute;
 			opacity: 0.4;
-			top: 450px;
+			top: 400px;
 			left: 600px;
 			width: 680px;
-			height: 200px;
+			height: 287px;
 		}
 		#hm:link{
 			color: blue;
@@ -206,7 +206,7 @@
 <body>
 	<div id="hd">Education</div>
 	<div id="transbg">.</div>
-	<div id="txt">I have studied from KG to class XII in Loyola School, Jamshedpur. I secured 92.2% in 10th boards and got 92% in 12th boards. I did my coaching for JEE form Prerna Classes, Jamshedpur. I got 2241 rank in JEE advanced and am currently studying in IIT Kharagpur.</div>
+	<div id="txt">I have studied from KG to class XII in Loyola School, Jamshedpur. I secured 92.2% in 10th boards and got 92% in 12th boards. I did my coaching for JEE form Prerna Classes, Jamshedpur. I got a rank of 2241 in JEE advanced and am currently studying in IIT Kharagpur in the department of Electrical Engineering enrolled in its 4 year B.Tech course of Instrumentation Engineering.</div>
 	<img id="Loyola" src="LHSlogo.png">
 	<img id="KGP" src="KGPlogo.png">
 	<a id="hm" href="index.html">Home</a>
